--- a/labreport.tex
+++ b/labreport.tex
@@ -41,14 +41,20 @@
 \maketitle
 
 \section{Introduction}
-The accurate simulation of transient experiments typically requires thermal feedback to account for a variety of phenomenon such as Doppler broadening. To improve the transient analysis code TDKENO an investigation has begun into the best methods for incorporating thermal feedback. A large motivation is to improve the capabilities of modeling the TREAT reactor at the INL. TDKENO has proved capable of calculating values in agreement with TREAT experimental values.  The caveat is it has relied on feedback provided through empirical TREAT data, thus not making the approach robust.
-The rapid transient conditions induced in TREAT experiments deposits significant heat quickly into the core and then rapidly cools.  Unlike commercial LWRs and BWRs there is no water moderator/coolant to complicate the heat-up model.  To better simulate these experiments it is desirable to utilize a simple heat-up model coupled to a neutronics solver. The primary objective is to be able to update the cross sections at the new temperatures to account for Doppler Broadening, which is thought to influence the TREAT experiments greatly.  
+The accurate simulation of transient experiments typically requires thermal feedback to account for a variety of phenomenon such as Doppler broadening. To improve the transient analysis code TDKENO an investigation has begun into the best methods for incorporating thermal feedback. A large motivation is to improve the capabilities of modeling the TREAT reactor at the INL. TDKENO has proved capable of calculating values in agreement with TREAT experimental values.  The caveat is it has relied on feedback provided through empirical TREAT data, thus the approach is not robust.
+The rapid transient conditions induced in TREAT experiments deposits significant heat quickly into the core.  Unlike commercial LWRs and BWRs there is no water moderator/coolant to complicate the heat-up model.  To better simulate these experiments it is desirable to utilize a simple heat-up model coupled to a neutronics solver. The primary objective is enable the updating of cross sections at the new temperatures to account for Doppler Broadening, which is thought to influence the TREAT experiments greatly.  
 
 \section{Overview of TDKENO}
 
 TDKENO is a transient analysis tool that solves the time dependent Boltzmann transport equation with the explicit representation of delayed neutrons. It does so with the Improved Quasi-Static (IQS) Method, which allows for the flux profile vary in time.  The main difference between the original Quasi-Static and IQS is the time derivative in IQS is handled explicitly with a backwards Euler approximation \cite{goluoglu2001time}. 
 
-The basic assumption in IQS is that the total neutron flux can be factored into a shape and amplitude function \cite{Gehin}.  The amplitude function captures the time dependence and takes on physical significance by being cast into the form of the point kinetics equations as follows:
+The basic assumption in IQS is that the total neutron flux can be factored into a shape and amplitude function \cite{Gehin}.  
+\begin{equation}
+\label{factor}
+    \phi(\bar{r},\bar{\Omega}',E,t) = A(t)\Psi(\bar{r},\bar{\Omega}',E,t)
+\end{equation}
+In Equation \ref{factor} $A$ = amplitude function, and $S$ = shape function.
+The amplitude function captures the time dependence and takes on physical significance by being cast into the form of the point kinetics equations as follows:
 
 \begin{equation}
     \label{eq:pt_kin}
@@ -67,7 +73,7 @@ where $P(t)$ is the amplitude function, $\rho$ is reactivity, $\bar{\beta}$ is t
      \label{fig:simpletdk}
  \end{figure}
 
-Applying this factorization to the three-dimensional time-dependent transport equation with the explicit representation of delayed neutrons results in a set of coupled equations.  Equations for the flux shape, amplitude, and delayed neutron precursors are solved on several time scales through an iterative process. The relative sizes are shown in Figure \ref{fig:time_scale}. 
+Applying the factorization in equation \ref{factor} to the three-dimensional time-dependent transport equation with the explicit representation of delayed neutrons results in a set of coupled equations.  Equations for the flux shape, amplitude, and delayed neutron precursors are solved on several time scales through an iterative process. The relative sizes are shown in Figure \ref{fig:time_scale}. 
 
 \begin{figure}[h]
     \centering
@@ -81,78 +87,134 @@ The advantage of varying these time scales is less computational time compared t
  In its current formulation, TDKENO does not do this but rather lets the user define when a flux shape should be calculated.  This gives flexibility and may allow for computational savings as transients experience a rapid change in neutron distribution that is generally known about \emph{a posteriori} and rapidly come to a steady state. Therefore, a new calculation of the flux shape is not required.
 
 \section{Current Status of TDKENO}
-Feedback is incorporated into TDKENO specific to a problem.  For example an empirical model from historical data is implemented for TREAT specific problems. This model calculates a correction factor for the reactivity from the yield as follows:
+Feedback is incorporated into TDKENO on a problem specific basis.  For example an empirical model from historical data is implemented for TREAT simulations. This model calculates a correction factor for the reactivity from the yield as follows:
 \begin{equation}
     \rho_{fb}(t) = \sum_{i = 0}^{3}a_i Y^i (t)
 \end{equation}
 where $\rho_{fb}(t)$ is the feedback reactivity, $Y^i (t)$ is the total yield in the core at time $t$, and $a_i$ is the empirical coefficient for a third order polynomial.
-  This provides reasonable answers but in previous simulations appears to differ significantly from experiment in calculating the peak power.  For the transient experiments simulated it over calculates the peak power significantly. However, the yield calculated agrees well with experiment.
+  This provides reasonable answers but previous simulations show significant deviations from experiment in calculating the peak power.  For the transient experiments simulated it over calculates the peak power significantly.  However, the yield calculated agrees well with experiment.
 Quenching coefficients and several problem specific feedback methods were included in the past.  A simple adiabatic model was put in place for a benchmark problem in \cite{Bentley}.  This is the closest to a generalized feedback model as was every attempted.  There is an obvious need for a more generalized feedback method and one that captures the physics better.  The IQS methodology complicates this with several time scales and complex iterative scheme.  
 
 \section{Method for Incorporating Thermal Feedback}
 
-For TREAT experiments and most transients, the thermal effect that needs to be resolved is the Doppler broadening of cross sections.  As the reactor increases in temperature the cross sections are broadened.  These changes in cross sections propagate through the entire problem.  Without feedback or with incorrect feedback the cross sections will not be updated and the results will differ from experiment.  Transients occur quickly and therefore can be looked at with models as simple as an adiabatic heat-up model.  From conversations with others working on TREAT the clipped transients work well with this model.  The next improvement, we believe for shaped transients, is to look at a steady state heat equation to capture the thermal conductivity effects.  The ultimate goal for reactors beyond TREAT is to couple the neutronics of TDKENO with a CFD (computational fluid dynamics) or TH (thermal-hydraulics) specific code.  Conventional reactors are moderated with water that may be in several phases.  Simple thermal models generally do not work with systems such as these.  As the goal is first to understand TREAT we looked at incorporating the adiabatic and a heat conduction model.
+For TREAT experiments and most transients, the thermal effect that needs to be resolved is the Doppler broadening of cross sections.  As the reactor increases in temperature the cross sections are broadened.  These changes in cross sections propagate through the entire problem.  Without feedback or  incorrect feedback the cross sections will not be updated and the results will differ from experiment.  Transients occur quickly and therefore can be looked at with simple an adiabatic heat-up model.  From conversations with others working on TREAT the clipped transients work well with this model.  The next improvement, we believe for shaped transients, is to look at a steady state heat equation to capture the thermal conductivity effects.  The ultimate goal for reactors beyond TREAT is to couple the neutronics of TDKENO with a CFD (computational fluid dynamics) or TH (thermal-hydraulics) specific code.  Conventional reactors are moderated with water that may be in several phases.  Simple thermal models generally do not work with systems such as these.  As the goal is first to understand TREAT we looked at incorporating an adiabatic heat up  and a heat conduction model.
 
 \subsection{Internal coupling}
- Two or more code bases may be built together such that one may call the others routines and pass data around in memory.  The most desirable option would be to build TDKENO under the MOOSE framework.  That would enable data to be based around instead of being written out and read by another program.  The difficulty in internally coupling TDKENO is the vastly different structures and less formal software development practices within TDKENO.  One such difficulty is TDKENO being written in Fortran 90.  Talking with Cody at the MOOSE team, Fortran 90 is slightly more difficult than other programming languages because of it inconsistent name mangling.  He said it is definitely possibly though, and they have built legacy programs within MOOSE before.  However, he said each time it was a unique problem and challenging.  Something that in itself may take the whole summer.  Looking to get some kind of results by the end of the summer I did not opt for the internal coupling method.
+ Two or more code bases may be built together such that one may call the others routines and pass data around in memory.  The most desirable option would be to build TDKENO under the MOOSE framework.  That would enable data to be accessed quickly by either program.  The difficulty in internally coupling TDKENO is the vastly different structures and less formal software development practices within TDKENO.  One such difficulty is TDKENO being written in Fortran 90.  Talking with Cody at the MOOSE team, Fortran 90 is slightly more difficult than other programming languages because of it inconsistent name mangling.  He said it is definitely possibly and they have built legacy programs within MOOSE before.  However, he said each time it was a unique problem and challenging.  Something that in itself may take the whole summer.  Looking to get some kind of results by the end of the summer the internal coupling method looked too daunting of a challenge. 
 
 \subsection{External Coupling}
-External coupling generally refers to code coupling methods build exclusively and rely on passing around input/output files to achieve coupling of data.  These methods are not as clean or robust but may be quicker to implement. This has an additional benefit in that KENO does not have to be built under the MOOSE framework, keeping TDKENO open to the possibility of using a different solver for the flux shape.  The reliance on KENO as the flux shape solver will be addressed in the future work section. 
+External coupling generally refers to methods that rely on passing around input/output files.  These methods are not as clean or robust but may be quicker to implement. This has an additional benefit in that KENO does not have to be built under the MOOSE framework, keeping TDKENO open to the possibility of using a different solver for the flux shape.  The reliance on KENO as the flux shape solver will be addressed in the future work section. 
 
-\section{External Coupling Implementation}
+\section{External Coupling Implementation }
 
 The basic strategy of coupling MOOSE and TDKENO externally is to write out the necessary information with several scripts to parse data and call either program. This turned out to be the non-trivial to do in generality. 
 
-The fundamental issue with coupling TDKENO/MOOSE is the different approach to modeling the geometry each takes.  TDKENO models the system utilizing KENO's Monte Carlo geometry, where shapes are defined by quadratic functions and referred to as CSG (combinatorial solid geometry). This allows for relatively simple definitions of the geometry to enable a system to be modeled almost exactly. MOOSE is a finite element analysis tool and requires a mesh to determine the geometry.  This is typically less detailed and more difficult to create than with Monte Carlo geometry implementations.  Looking through the literature and KENO manuals there was no clear method for mapping information between CSG and mesh based geometries.  Additionally, KENO has no generic interfaces for multi-physics coupling.  Several strategies were investigated to create a generic enough mapping of information between the two codes. 
-The first was to tally the fission density on top of the Monte Carlo geometry.  This is already possible in KENO.  The user defines a Cartesian grid, specifying the height, width, depth and number of points in-between.   The fission density is then found in each section of this Cartesian geometry.  The discretization would have to be done such that the grid defined would match up to fuel elements.  If done this would provide the fission density in each fuel element.  If the CSG geometry defined fuel elements did not align with the grid then fissions may be tallied over larger or smaller regions than they should.  The result would some fuel elements appearing to have artificially larger or lower temperatures.  While not ideal in principle it is possible to define a grid that lines up well with the existing geometry.  
+The fundamental issue with coupling TDKENO/MOOSE is the different approach to modeling the geometry each takes.  TDKENO models the system utilizing KENO's Monte Carlo geometry, where shapes are defined by quadratic functions. This is referred to as CSG (combinatorial solid geometry). CSG allows for relatively simple definitions of the geometry and enables a system to be modeled almost exactly. MOOSE is a finite element analysis tool and requires a mesh to determine the geometry.  This is typically less detailed and more difficult to create than with Monte Carlo geometry types.  Looking through the literature and KENO manuals there was no clear method for mapping information between CSG and mesh based geometries.  Additionally, KENO has no generic interfaces for multi-physics coupling.  In fact it did not seem there were codes outside of SCALE that interfaced with KENO.  Several strategies were investigated to create a generic enough mapping of information between the two codes. 
+
+The first was to tally the fission density on top of the Monte Carlo geometry.  This is already possible in KENO.  The user defines a Cartesian grid, specifying the height, width, depth and number of points in-between.   The fission density is then found in each section of this Cartesian geometry.  The discretization would have to be done such that the grid defined would match up to fuel elements.  If done this would provide the fission density in each fuel element.  If the CSG geometry defined fuel elements did not align with the grid then fissions may be tallied over larger or smaller regions than they should.  The result would some fuel elements appearing to have artificially larger or lower temperatures.  While not ideal, in principle it is possible to define a grid that lines up well with the existing geometry.  To highlight complexity of the TREAT model we show a three dimensional portion of the core in Figure \ref{fig:treat3d}. Each fuel element is explicitly represented as well as control rods. 
 
 \begin{figure}
     \centering
-    \includegraphics[width=10cm]{figures/treat_top_view.png}
-    \caption{Slice of the TREAT model.  The model is pin resolved with all materials represented explicitly. }
-    \label{fig:treat2d}
+    \includegraphics[width=10cm]{figures/big_to_small}
+    \caption{The full TREAT core is given.  A control rod is shown larger to highlight the detail in the model.}
+    \label{fig:treat3d}
 \end{figure}
 
 KENO writes out this tally style "mesh" in a proprietary file type with the extension .3dmap that may be read by several SCALE applications.  There are tools within SCALE to convert these file types to more generic ones such as VTK and SILO.  The VTK format, supported by VisIt, seemed the most appropriate as it appeared MOOSE could read those formats.  Upon further inspection was not entirely true. MOOSE is only able to read unstructured XML based VTK files.  This is a newer more robust format that is used by VisIt and supported by LibMesh.  So the simple conversion utility already available in SCALE was not useful as it was only able to convert from .3dMap to rectilinear VTK format.  In principle it would be possible to modify MOOSE to read these formats but would require significant changes according to the MOOSE team.  
 
 The next thought was to convert from VTK rectilinear to VTK-XML unstructured.  It was possible to convert to XML with a GUI tool in VisIt but it remained a structured mesh.  With no way to map this KENO information into MOOSE the VTK XML was converted to .XYZ format.  This was read into moose and captured the nodal points correctly but all of the associated information about the fission density was lost. Directly converting the KENO mesh for MOOSE appears to require significant manipulation of both codes.
-	One more approach was attempted. That was incorporating the Exodus II API to construct a mesh directly from the KENO data.  Exodus is the preferred format in MOOSE.  The API allows for creation of exodus meshes fairly simply.  The difficulty came in the format KENO stored everything made the mapping between nodal points confusing and difficult to come up with a scheme that would work in general.  
+
+One more approach was attempted. That was incorporating the Exodus II API to construct a mesh directly from the KENO data.  Exodus is the preferred format in MOOSE.  The API allows for creation of exodus meshes fairly simply.  The difficulty came in the format KENO stored everything made the mapping between nodal points confusing and difficult to come up with a scheme that would work in general.  
 Below highlights the conversion methods attempted.
 
-3dMap $\rightarrow$ VTK (rectilinear) $\rightarrow$ VTK XML $\rightarrow$ MOOSE
+$3dMap \rightarrow VTK (rectilinear) \rightarrow VTK XML \rightarrow MOOSE$
 
-3dMap $\rightarrow$ VTK (rectilinear) $\rightarrow$ VTK XML $\rightarrow$ XYZ $\rightarrow$ MOOSE
+$3dMap \rightarrow VTK (rectilinear) \rightarrow VTK XML \rightarrow XYZ \rightarrow MOOSE$
 
-3dMap $\rightarrow$ VTK (rectilinear) $\rightarrow$ Exodus II$\rightarrow$ MOOSE
+$3dMap \rightarrow VTK (rectilinear) \rightarrow Exodus II\rightarrow MOOSE$
 
-3dMap $\rightarrow$ Exodus II $\rightarrow$ MOOSE
+$3dMap \rightarrow Exodus II \rightarrow MOOSE$
 
 Instead of converting the mesh into a format the MOOSE can already read it seemed reasonable to construct a mesh in MOOSE and map values onto that mesh that approximately represents the geometry in KENO.  This seemed simpler as one can query mesh points in MOOSE and add values to it on the fly.  Instead of utilizing the .3dmap based mesh problem was discretized based on each fuel element of TREAT.  Note, this method is not robust and generally would only work for simple heat-up problems like in TREAT transients.  The fission density per unit was already given in KENO without additional tallies.  Our model of TREAT is organized into units of fuel elements positioned based on its location within a 2D array. See the figure below.  A unique unit may be constructed so the fission density is not averaged over similar units that are repeated.  Since the units were arranged into an array it is relatively simple to get create the geometry in 2D and capture the radial fission or flux distribution.  Furthermore additional discretization may not have been useful due to the method our model was created and how the cross sections are generated.  Each fuel element unit has several materials in it that are used to create multi-group cross sections. These materials may be re-used and therefor the cross section values re-used.  Even in different parts of the core at possibly different temperatures.  Updating the cross sections to new temperatures means assigning unique materials a new temperature and having that material correspond to a unique unit.  
 
+A pseudo-mesh was created based on the location of each fuel element in two dimensions with the corresponding fission density, temperature.  The difference in the original KENO geometry and the generated one for mapping is shown in Figure \ref{fig:treat2d} and \ref{fig:simpletreat}.  A series of python scripts parse the KENO outputs to gather the fission density, create an (x,y) location for the center of each fuel element, and calculate the power density. It should be noted that KENO automatically provides the fission density in units of $fissions/cm^3$ and normalized per source neutron. The power density at first is calculated simply by multiplying the fission density by the average release per energy for U-235.  In reality this energy/fission value is more complicated to calculate but for an initial test the simpler option was chosen. 
+
 \begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
     \centering
-    \includegraphics[width=10cm]{figures/treat_top_view.png}
-    \caption{Overview of TREAT model in two dimensions}
+    \includegraphics[width=6cm]{figures/treat_top_view.png}
+    \caption{Overview of TREAT model in two dimensions.}
     \label{fig:treat2d}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=6cm]{figures/simple-treat.png}
+  \caption{TREAT representation when mapping to MOOSE mesh.}
+  \label{fig:simpletreat}
+\end{minipage}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=10cm]{figures/treat-fuel-elem.png}
+    \includegraphics[width=6.5cm]{figures/treat-fuel-elem.png}
     \caption{Detailed look at a TREAT fuel element with a control rod}
     \label{fig:treat2d}
 \end{figure}
 
-A pseudo-mesh was created based on the location of each fuel element in 2D with the corresponding fission density, temperature.  A series of python scripts parse the KENO outputs to gather the fission density, create an (x,y) location for the center of each fuel element, and calculate the power density. It should be noted that KENO automatically provides the fission density in units of fissions/$cm^3$ and normalized per source neutron. The power density at first is calculated simply by multiplying the fission density by the average release per energy for U-235.  In reality this energy/fission value is more complicated to calculate but for an initial test the simpler option was chosen.  
-
-	Next, we move on to working on the MOOSE side.  The goal is to solve the heat conduction problem with the heat source as the calculated power density. A heat conduction module is already available within MOOSE.  This was modified slightly to read in the text file produced from the KENO data and assign a different thermal conductivity value and power density at each quadrature point.  The mesh generated in MOOSE is created a priori to have approximately the same dimensions in 2D as the TREAT problem.  The KENO data was really providing values on nodal points but the values needed to be assigned on quadrature points, which are slightly offset from the nodal points.  This was achieved by simply determining the absolutely closest point from the KENO data to the corresponding quadrature point. 
+	Next, we move on to working on the MOOSE side.  The goal is to solve the heat conduction problem with the heat source as the calculated power density. A heat conduction module is already available within MOOSE.  This was modified slightly to read in the text file produced from the KENO data and assign a different thermal conductivity value and power density at each quadrature point.  The mesh generated in MOOSE is created \emph{a priori} to have approximately the same dimensions in 2D as the TREAT problem.  The KENO data was really providing values on nodal points but the values needed to be assigned on quadrature points, which are slightly offset from the nodal points.  This was achieved by simply determining the absolutely closest point from the KENO data to the corresponding quadrature point. 
 	
 \begin{figure}
     \centering
-    \includegraphics[width=10cm]{figures/nodalvsquad.png}
+    \includegraphics[width=8cm]{figures/nodalvsquad.png}
     \caption{Difference in nodal and quadrature mesh points}
     \label{fig:nodalquad}
 \end{figure}
+
+On the MOOSE side the stationary heat conduction equation is solved as described in the following:
+
+\begin{equation}
+    -\nabla \cdot k\nabla T - Q = 0
+\end{equation}
+with $k$ as the thermal conductivity in units of $\frac{W}{cm K}$  and $Q$ the power density in units of $\frac{W}{cm^3}$. The power density was calculated by multiplying the fission density from KENO by a $\kappa$ value of $3.11E^{-11} W/fission$. For fuel elements historical TREAT data is used for the thermal conductivity during heat-up (a different expression provides the thermal conductivity as the core cools).  This of course dependent on temperature so the following expression is evaluated at the given temperature.
+
+\begin{equation}
+    k = 5.08449E^{-8} * T^2 - 1.942915E^{-4} * T + 2.816049E^{-1}
+    \label{cond}
+\end{equation}
+
+It should be noted that Equation \ref{cond} is only valid for temperatures between $250K$ and $1400K$.
+At the time of writing this calculations runs and provides an answer.  The answers given appear unreasonable unfortunately when running it with the TREAT problem.  Given the time constraints it was not possible to evaluate the TREAT problem in greater detail.  Typically the results were too small or too large than would be expected.  There should be a normalization to the thermal power when calculating the power density.  Several variations were attempted but changing this gave the unphysical answers.  By unphysical, either temperature distributions were on the order of $10-8$ or $10^4$ on the Kelvin scale. 
+
+Despite the results of this effort not yielding anything concrete it still shows the proof of concept.  That KENO information may be mapped to MOOSE, albeit with some approximation.  The scripts and methods developed have been implemented to be automated once each component is verified to produce reasonable answers.  A diagram describing the ideal calculation flow is given in Figure \ref{fig:flow}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=18cm]{figures/flowcharttdk.png}
+    \caption{Proposed flow chart for the coupling of TDKENO to MOOSE.}
+    \label{fig:flow}
+\end{figure}
+
+\subsection{Adiabatic Heat Up Model}
+
+In an effort to accomplish some kind of feedback a simple adiabatic heatup model is looked at.  This calculation may all be done within TDKENO, requiring no coupling to MOOSE.  With the rapid transients the heat may all be thought to be deposited locally in fuel elements and without significant interaction between elements.  Making this assumption the change in temperature from the fissions generated within a fuel element may be calculated with the following equation.
+
+\begin{equation}
+    \frac{dT(r,t)}{dt} = \epsilon \kappa \Sigma_f(T(r),t) \Psi(T(r),t) N
+    \label{adiabatic}
+\end{equation}
+In equation \ref{adiabatic} $\epsilon$ is defined as $\epsilon = \frac{1}{\rho C_p}$ with $rho$ as the density and $C_p$ as the heat capacity, $\kappa$ is the energy per fission, $\Sigma_f$ is the total fission cross section, $\Psi$ is the total angular flux, and $N$ is a normalization factor. For the heat capacity historical data is used for the TREAT problem.  Again this quantity is temperature dependent, so the following expression is evaluated before calculation.
+
+\begin{equation}
+    C_p(T) = -5.821E^{-10}*T^3 - 4.3694E^{-7}*T^2 + 2.8369E^{-3}*T - 1.009E^{-2}
+\end{equation}
+This expression is valid from $273K$ to $810K$. The density value too is chosen from historical data, representing the total fuel element.   The values range from $1.71 g/cm^3$ $1.76g/cm^3$ depending on the concentration of uranium within graphite. 
+
+In TDKENO this expression was found for each region, thus providing greater detail than with the heat conduction approach.  In KENO units are divided into regions.  There typically are several regions per fuel element and this number can be increased with input generator made for TREAT simulations.  
+
+The derivative was found with the backwards Euler method. The change in the temperature is added to a starting temperature of $300K$.  After each iteration the change in temperature for each region is found and added to the previous temperature. The temperatures are updated after each flux shape. The normalization factor ($N$) is based on the initial power of the system and is found by multiplying the fissionable volume by the power in and dividing that by the energy per fission. 
+
+Once again there was not enough time to perform a through analysis but the temperatures found either increased by a few degrees or several thousand degrees.  This implementation is done on the scale of the flux shape.  For the benchmark problem 14-A2 in \cite{Bentley} the temperatures were calculated on the scale of the point kinetics solves.  The method differed slightly in that the fission cross sections were broadened within TDKENO and prepared for the next iteration.  This problem is simple with only 2 energy groups thus making the broadening relatively simple.  The approach implemented for the TREAT problem found the temperatures on the flux shape time scale because using these  temperatures the cross sections could be evaluated by CENTRM/PMC.  Doing this method on the scale of the point kinetics would be too computationally expensive as CENTRM/PMC takes several minutes to run. The point kinetics calculations are solved hundreds of times between flux shapes.  Simpler methods may be implemented with TDKENO to broaden the cross sections but was not investigated thoroughly at this time.  This may allow for coupling on the point kinetics time scale.   
 
 \section{Cross-Section Processing}
 No matter the method of coupling, to capture the affect of Doppler broadening,  cross sections must be updated to the new temperature. Several approaches are possible:
@@ -208,7 +270,7 @@ There are significant disadvantages to this approach:
 	  Require lots of rewriting of KENO possibly new formulation of the governing equations.
 
 \subsection{Continue using KENO but introduce functional expansion tallies}
-To get around complex mapping of geometries and discritazion of the Monte Carlo geometry the Functional Expansion Tally(FET) method may be introduced in KENO.  Here values of interest may be tallied and the distribution represented by well known polynomials.  This has been the method introduced in OpenMC with good results and recently in Serpent 2 with encouraging results.  More than 10 years ago FETs were implmeneted in MCNP4 \cite{griesheimer2004two} but with simpler polynomials. This would indicate its possible to do in KENO as well due to its similarities with MCNP. Both OpenMC and Serpent recreated radial distributions of power and temperature with Zernike polynomials  for cylindrical fuel elements. In the axial direction, Legendre polynomials are used. 
+To get around complex mapping of geometries and discritazion of the Monte Carlo geometry the Functional Expansion Tally(FET) method may be introduced in KENO.  Here values of interest may be tallied and the distribution represented by well known polynomials.  This has been the method introduced in OpenMC with good results and recently in Serpent 2 with encouraging results.  More than 10 years ago FETs were implemented in MCNP4 \cite{griesheimer2004two} but with simpler polynomials. This would indicate its possible to do in KENO as well due to its similarities with MCNP. Both OpenMC and Serpent recreated radial distributions of power and temperature with Zernike polynomials  for cylindrical fuel elements. In the axial direction, Legendre polynomials are used. 
 
 \begin{figure}
     \centering
@@ -221,7 +283,7 @@ Utilizing the traditional Zernike Polynomials works well on cylindrical fuel ele
 
 \begin{figure}
     \centering
-    \includegraphics[width=8cm]{figures/octogon-fet.png}
+    \includegraphics[width=8cm]{figures/octogon-FET.png}
     \caption{Several examples of Zernike functions in an octagon \cite{ferreira2015orthogonal}}.
     \label{fig:oct-fet}
 \end{figure}
